# OOP

./: README.md
Lab_1/Ex_2/: Ex_2.sln
Lab_1/Ex_2/Ex_2/: Ex_2.cpp  Ex_2.vcxproj
Lab_10/Ex_1/: Ex_1.sln
Lab_10/Ex_1/Ex_1/: Ex_1.vcxproj  main.cpp
Lab_11/: CMakeLists.txt
Lab_11/src/: main.cpp  vector.cpp
Lab_11/tests/: vector_test.cpp
Lab_12/: Class Diagram.asta
Lab_12/Ex_1/: Ex_1.sln
Lab_12/Ex_1/Ex_1/: Acquantaince.cpp  Acquantaince.h  Agenda.cpp  Agenda.h  Colleague.cpp  Colleague.h  Contact.h  ContactType.h  Ex_1.vcxproj  Friend.cpp  Friend.h  main.cpp
Lab_2/Ex_1/Ex_1/: NumberList.h
Lab_2/Ex_2/Ex_2/: GlobalFunc.h  Student.h
Lab_3/Ex_1/Ex_1/: Ex_1.vcxproj  Math.cpp  Math.h
Lab_3/Ex_2/Ex_2/: Canvas.h
Lab_4/Ex1/Ex1/: Sort.h
Lab_5/Ex_1/: Ex_1.sln
Lab_5/Ex_1/Ex_1/: Ex_1.vcxproj  Number.cpp  Number.h  main.cpp
Lab_6/Ex/: Ex.sln
Lab_6/Ex/Ex/: Car.h  Circuit.cpp  Circuit.h  Dacia.cpp  Dacia.h  Ex.vcxproj  Ford.cpp  Ford.h  Mazda.cpp  Mazda.h  Mercedes.cpp  Mercedes.h  Toyota.cpp  Toyota.h  Weather.h  main.cpp
Lab_7/Ex_1/: Ex_1.sln
Lab_7/Ex_1/Ex_1/: Ex_1.vcxproj  main.cpp
Lab_7/Ex_2/: Ex_2.sln
Lab_7/Ex_2/Ex_2/: Ex_2.vcxproj  main.cpp
Lab_8/Ex_1/: Ex_1.sln
Lab_8/Ex_1/Ex_1/: CompareModule.cpp  CompareModule.h  Ex_1.vcxproj  Phrase.cpp  Phrase.h  main.cpp
Lab_9/Ex_1/: Ex_1.sln
Lab_9/Ex_1/Ex_1/: Ex_1.vcxproj  main.cpp
